correcion de metodos en miembrosCCTest, correcion en el pom ( version jdk)